# memguard_Riffnel

./: LICENSE  README.md  pyproject.toml
.venv-e2e/: pyvenv.cfg
.venv-e2e-310/Scripts/: activate  activate.bat
examples/: agent_integration.py  attack_defense.py  integration_patterns.py  quickstart.py
memguard/: __init__.py  middleware.py
memguard/adapters/: generic.py
memguard/core/: audit.py  memory_entry.py  memory_proxy.py  memory_store.py  policy_engine.py
memguard/detection/: pipeline.py  privilege_escalation.py  semantic_drift.py
memguard_Riffnel.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
memguard_data/: audit.jsonl  memories.db
memguard_data/keys/: memguard_signing.key  memguard_verify.pub
scripts/: check_release_metadata.py  smoke_check.py
tests/: __init__.py  test_detection.py  test_memguard.py
